// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component on the browser renders with initial window width with full props 1`] = `
<DocumentFragment>
  <picture
    style="display: block;"
  >
    <source
      height="972"
      media="(min-width: 1200px)"
      srcset="https://www.example.com/desktop.avif"
      type="image/avif"
      width="2000"
    />
    <source
      height="972"
      media="(min-width: 1200px)"
      srcset="https://www.example.com/desktop.webp"
      type="image/webp"
      width="2000"
    />
    <source
      height="972"
      media="(min-width: 1200px)"
      srcset="https://www.example.com/desktop.jpg"
      type="image/jpeg"
      width="2000"
    />
    <source
      height="1024"
      media="(min-width: 768px)"
      srcset="https://www.example.com/tablet.avif"
      type="image/avif"
      width="1024"
    />
    <source
      height="1024"
      media="(min-width: 768px)"
      srcset="https://www.example.com/tablet.webp"
      type="image/webp"
      width="1024"
    />
    <source
      height="1024"
      media="(min-width: 768px)"
      srcset="https://www.example.com/tablet.jpg"
      type="image/jpeg"
      width="1024"
    />
    <source
      height="900"
      srcset="https://www.example.com/mobile.avif"
      type="image/avif"
      width="600"
    />
    <source
      height="900"
      srcset="https://www.example.com/mobile.webp"
      type="image/webp"
      width="600"
    />
    <source
      height="900"
      srcset="https://www.example.com/mobile.jpg"
      type="image/jpeg"
      width="600"
    />
    <img
      id="testID"
    />
  </picture>
  <video
    height="1024"
    style="display: none;"
    width="1024"
  >
    <source
      src="https://www.example.com/tablet.mp4"
      type="video/mp4"
    />
    <source
      src="https://www.example.com/tablet.webm"
      type="video/webm"
    />
  </video>
</DocumentFragment>
`;

exports[`Component on the browser renders with initial window width with invalid props 1`] = `
<DocumentFragment>
  <picture>
    <source
      media="(min-width: 9999999px)"
      srcset="https://www.example.com/mobile.jpg"
      type="image/jpeg"
    />
    <img />
  </picture>
  <video
    style="display: none;"
  />
</DocumentFragment>
`;

exports[`Component on the browser renders with initial window width with minimal props 1`] = `
<DocumentFragment>
  <picture>
    <source
      srcset="https://www.example.com/mobile.jpg"
      type="image/jpeg"
    />
    <img />
  </picture>
  <video
    style="display: none;"
  >
    <source
      src="https://www.example.com/mobile.webm"
      type="video/webm"
    />
  </video>
</DocumentFragment>
`;

exports[`Component on the browser updates on window resize with full props 1`] = `
<DocumentFragment>
  <picture
    style="display: block;"
  >
    <source
      height="972"
      media="(min-width: 1200px)"
      srcset="https://www.example.com/desktop.avif"
      type="image/avif"
      width="2000"
    />
    <source
      height="972"
      media="(min-width: 1200px)"
      srcset="https://www.example.com/desktop.webp"
      type="image/webp"
      width="2000"
    />
    <source
      height="972"
      media="(min-width: 1200px)"
      srcset="https://www.example.com/desktop.jpg"
      type="image/jpeg"
      width="2000"
    />
    <source
      height="1024"
      media="(min-width: 768px)"
      srcset="https://www.example.com/tablet.avif"
      type="image/avif"
      width="1024"
    />
    <source
      height="1024"
      media="(min-width: 768px)"
      srcset="https://www.example.com/tablet.webp"
      type="image/webp"
      width="1024"
    />
    <source
      height="1024"
      media="(min-width: 768px)"
      srcset="https://www.example.com/tablet.jpg"
      type="image/jpeg"
      width="1024"
    />
    <source
      height="900"
      srcset="https://www.example.com/mobile.avif"
      type="image/avif"
      width="600"
    />
    <source
      height="900"
      srcset="https://www.example.com/mobile.webp"
      type="image/webp"
      width="600"
    />
    <source
      height="900"
      srcset="https://www.example.com/mobile.jpg"
      type="image/jpeg"
      width="600"
    />
    <img
      id="testID"
    />
  </picture>
  <video
    height="1024"
    style="display: none;"
    width="1024"
  >
    <source
      src="https://www.example.com/tablet.mp4"
      type="video/mp4"
    />
    <source
      src="https://www.example.com/tablet.webm"
      type="video/webm"
    />
  </video>
</DocumentFragment>
`;

exports[`Component on the browser updates on window resize with full props 2`] = `
<DocumentFragment>
  <picture
    style="display: block;"
  >
    <source
      height="972"
      media="(min-width: 1200px)"
      srcset="https://www.example.com/desktop.avif"
      type="image/avif"
      width="2000"
    />
    <source
      height="972"
      media="(min-width: 1200px)"
      srcset="https://www.example.com/desktop.webp"
      type="image/webp"
      width="2000"
    />
    <source
      height="972"
      media="(min-width: 1200px)"
      srcset="https://www.example.com/desktop.jpg"
      type="image/jpeg"
      width="2000"
    />
    <source
      height="1024"
      media="(min-width: 768px)"
      srcset="https://www.example.com/tablet.avif"
      type="image/avif"
      width="1024"
    />
    <source
      height="1024"
      media="(min-width: 768px)"
      srcset="https://www.example.com/tablet.webp"
      type="image/webp"
      width="1024"
    />
    <source
      height="1024"
      media="(min-width: 768px)"
      srcset="https://www.example.com/tablet.jpg"
      type="image/jpeg"
      width="1024"
    />
    <source
      height="900"
      srcset="https://www.example.com/mobile.avif"
      type="image/avif"
      width="600"
    />
    <source
      height="900"
      srcset="https://www.example.com/mobile.webp"
      type="image/webp"
      width="600"
    />
    <source
      height="900"
      srcset="https://www.example.com/mobile.jpg"
      type="image/jpeg"
      width="600"
    />
    <img
      id="testID"
    />
  </picture>
  <video
    height="1024"
    style="display: none;"
    width="1024"
  >
    <source
      src="https://www.example.com/tablet.mp4"
      type="video/mp4"
    />
    <source
      src="https://www.example.com/tablet.webm"
      type="video/webm"
    />
  </video>
</DocumentFragment>
`;
